--- a/tables.html
+++ b/tables.html
@@ -27,16 +27,46 @@
           <img src='./assets/hot icon.png' alt='Fire Icon' width="100px"/>
           <h1>Hot Restaurant</h1>
           <hr />
-          <h4>Book your seat before they are all gone!</h4>
-        </div>
-        <div class="col-lg-12">
-          <button type="button" class="btn btn-primary"><img src="https://img.icons8.com/color/48/000000/columns.png" width="50px" /> View Tables</button>
-          <button type="button" class="btn btn-danger"><img src="https://img.icons8.com/ios/50/000000/reservation.png" width="50px"/> Make Reservation</button>
+          <h4>Here are the booked tables!</h4>
         </div>
       </div>
 
       <br />
-      <a href="#" class="smallText">API Table Link</a><span class="smallText"> | </span><a href="#" class="smallText">API Wait List</a>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Order Num.</th>
+                <th scope="col">Name</th>
+                <th scope="col">Phone Number</th>
+                <th scope="col">Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>123456799</td>
+                <td>a@mdo.d</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>748612308</td>
+                <td>g@fat.h</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Elliott</td>
+                <td>759372929</td>
+                <td>ghkh@fatd.h</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
 
 
