--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
           <h4>Book your seat before they are all gone!</h4>
         </div>
         <div class="col-lg-12">
-          <button type="button" class="btn btn-primary"><img src="https://img.icons8.com/color/48/000000/columns.png" width="50px" /> View Tables</button>
-          <button type="button" class="btn btn-danger"><img src="https://img.icons8.com/ios/50/000000/reservation.png" width="50px"/> Make Reservation</button>
+          <button type="button" id="tablesButton" class="btn btn-primary"><img src="https://img.icons8.com/color/48/000000/columns.png" width="50px" /> View Tables</button>
+          <button type="button" id="bookButton" class="btn btn-danger"><img src="https://img.icons8.com/ios/50/000000/reservation.png" width="50px"/> Make Reservation</button>
         </div>
       </div>
 
@@ -39,14 +39,18 @@
       <a href="#" class="smallText">API Table Link</a><span class="smallText"> | </span><a href="#" class="smallText">API Wait List</a>
     </div>
 
-
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    -->
+    <script type="text/JavaScript">
+      const tablesButtonEl = document.querySelector("#tablesButton");
+      const bookButtonEl = document.querySelector("#bookButton");
+
+      tablesButtonEl.addEventListener('click', () => {
+        window.location.href = './tables.html'
+      });
+
+      bookButtonEl.addEventListener('click', () => {
+
+      });
+    </script>
   </body>
 </html>
