--- a/tables.html
+++ b/tables.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row text-center bg-light rounded" style="padding: 2em 4em;">
         <div class="col-lg-12">
-          <img src='./assets/hot icon.png' alt='Fire Icon' width="100px"/>
+          <img src='http://localhost:3000/api/img/fireIcon' alt='Fire Icon' width="100px"/>
           <h1>Hot Restaurant</h1>
           <hr />
           <h4>Here are the booked tables!</h4>
@@ -77,7 +77,7 @@
       const homeButtonEl = document.querySelector("#homeButton");
 
       homeButtonEl.addEventListener("click", () => {
-        window.location.href = './home.html'
+        window.location.href = '/'
       });
     </script>
   </body>
