--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-lg-12">
           <button type="button" id="tablesButton" class="btn btn-primary"><img src="https://img.icons8.com/color/48/000000/columns.png" width="50px" /> View Tables</button>
-          <button type="button" id="bookButton" class="btn btn-danger"><img src="https://img.icons8.com/ios/50/000000/reservation.png" width="50px"/> Make Reservation</button>
+          <button type="button" id="bookButton" class="btn btn-danger" href="./form.html"><img src="https://img.icons8.com/ios/50/000000/reservation.png" width="50px"/> Make Reservation</button>
         </div>
       </div>
 
