--- a/form.html
+++ b/form.html
@@ -33,10 +33,11 @@
                 <h4>BMake your reservation</h4>
             </div>
             <div class="col-lg-12">
-                <button type="button" class="btn btn-primary"><img
-                        src="https://img.icons8.com/color/48/000000/columns.png" width="50px" href="./"> View Table <Table></Table>
-                    </button>
-                <a type="button" class="btn btn-link" href="./home.html"><img src="https://img.icons8.com/metro/26/000000/home.png"
+                <button type="button" class="btn btn-primary" id="tablesButton"><img
+                        src="https://img.icons8.com/color/48/000000/columns.png" width="50px" > View Table
+                    <Table></Table>
+                </button>
+                <a type="button" class="btn btn-link" id="home"><img src="https://img.icons8.com/metro/26/000000/home.png"
                         width="50px" /> </a>
             </div>
         </div>
@@ -74,6 +75,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+    <script type="text/JavaScript">
+            const tablesButtonEl = document.querySelector("#tablesButton");
+            const home = document.querySelector("#home");
+      
+            tablesButtonEl.addEventListener('click', () => {
+              window.location.href = '/tables'
+            });
+      
+            home.addEventListener('click', () => {
+              window.location.href = '/'
+            });
+          </script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
