--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row text-center bg-light rounded" style="padding: 2em 4em;">
             <div class="col-lg-12">
-                <img src='./assets/hot icon.png' alt='Fire Icon' width="100px" />
+                <img src='http://localhost:3000/api/img/fireIcon' alt='Fire Icon' width="100px" />
                 <h1>Hot Restaurant</h1>
                 <hr />
                 <h4>BMake your reservation</h4>
